syntax = "proto3";
option java_package = "orbit.shared.proto";
package orbit.shared;

import "google/protobuf/timestamp.proto";

message NodeIdProto {
    string key = 1;
    string namespace = 2;
}

message NodeInfoProto {
    NodeIdProto id = 1;
    CapabilitiesProto capabilities = 2;
    repeated NodeIdProto visibleNodes = 3;
    NodeLeaseProto lease = 4;
};

message CapabilitiesProto {
    repeated string addressableTypes = 1;
}

message NodeLeaseProto {
    string challenge_token = 1;
    google.protobuf.Timestamp renew_at = 2;
    google.protobuf.Timestamp expires_at = 3;
}